Al 15-lea commit: - exista notiunea de scor (trebuie doar afisata pe ecran, sub numarul de vieti) - capcanele au fost adaugate, rolul acestora va fi acela de a lua o viata a player-ului si-l va intoarce la inceputul mapei - acestea nu sunt desenate chiar perfect, insa sunt stabile cand camera nu se mai misca. ramane la latitudinea ta daca fixezi acest mic bug sau nu - trebuie sa adaugi inimi pe harta